infrastructure/controllers/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.10.97.50
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.feenx.io"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "feenx.io"
      allowedRoutes:
        namespaces:
          from: All
    # - protocol: HTTPS
    #   port: 443
    #   name: https-gateway
    #   hostname: "*.feenx.io"
    #   tls:
    #     certificateRefs:
    #       - kind: Secret
    #         name: cloudflare-cert
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    # - protocol: HTTPS
    #   port: 443
    #   name: https-domain-gateway
    #   hostname: feenx.io
    #   tls:
    #     certificateRefs:
    #       - kind: Secret
    #         name: cloudflare-domain-cert
    #   allowedRoutes:
    #     namespaces:
    #       from: All
#      allowedRoutes:
#        namespaces:
#          from: Selector
#          selector:
#            matchLabels:
#              dev.stonegarden.app: homepage
